# OpenGLFPS

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  OpenGLFPS.vcxproj  OpenGLFPS.vcxproj.filters
data/: .gitignore  build-zip.bat
data/animations/: animation-format.txt  move.txt
data/scenes/: bedroom.txt  floor.txt  mobius.txt  scene.txt  scene2.txt  scene_old.txt
data/shaders/: animated.shader  default.shader  laser.shader
data/textures/: cb.rgba  laser.rgba  monitor.raw  phone.rgba  tree.rgba
include/: Application.h  AudioPlayer.h  System.h
include/AssetManager/: AnimatedMesh.h  Animation.h  AssetManager.h  Audio.h  Collision.h  Config.h  Mesh.h  Scene.h  SceneManager.h  Shader.h  Texture.h  Util.h
include/components/: AnimatedRender.h  Collision.h  Draglook.h  Freelook.h  Freemove.h  Light.h  Listener.h  MenuRender.h  Particle.h  Physics.h  Position.h  Render.h
include/systems/: AnimatedRender.h  Draglook.h  Freelook.h  Freemove.h  Listener.h  MenuRender.h  Physics.h  Render.h
src/: Application.cpp  AudioPlayer.cpp  SceneManager.cpp  System.cpp  main.cpp
src/AssetManager/: AnimatedMesh.cpp  Animation.cpp  Audio.cpp  Collision.cpp  Config.cpp  Mesh.cpp  Scene.cpp  Shader.cpp  Texture.cpp
src/systems/: AnimatedRender.cpp  Draglook.cpp  Freelook.cpp  Freemove.cpp  Listener.cpp  MenuRender.cpp  Physics.cpp  Render.cpp
